--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -990,11 +990,11 @@ a:hover {
 
 .testimonial-box .author {
   color: #fff;
-  text-transform: uppercase;
   font-weight: 600;
   margin: 1rem 0;
   display: block;
-  font-size: 1.4rem;
+  font-size: 2.0rem;
+  color: #fad7a0;
 }
 
 .testimonial-box .comit {
